cmake_minimum_required(VERSION 3.17)
project(abc)
set(CMAKE_CXX_STANDARD 14)

file(GLOB sub_dirs RELATIVE ${PROJECT_SOURCE_DIR} abc[0-9]*)
foreach(sub_dir ${sub_dirs})
    if(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${sub_dir})
        file(GLOB files RELATIVE ${PROJECT_SOURCE_DIR}/${sub_dir} ${sub_dir}/*.cpp)
        foreach(file ${files})
            get_filename_component(name_we ${file} NAME_WE)
            string(TOUPPER ${name_we} name_we)
            add_executable(${sub_dir}${name_we} ${sub_dir}/${file})
        endforeach()
    endif()
endforeach()
